--- a/PrototypeBankSystem.Application/PrototypeBankSystem.Application.csproj
+++ b/PrototypeBankSystem.Application/PrototypeBankSystem.Application.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\PrototypeBankSystem.Domain\PrototypeBankSystem.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DTO\" />
+  </ItemGroup>
+
 </Project>
