--- a/PrototypeBankSystem.Presentation/PrototypeBankSystem.Presentation.csproj
+++ b/PrototypeBankSystem.Presentation/PrototypeBankSystem.Presentation.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="MaterialDesignThemes" Version="4.3.0" />
+    <PackageReference Include="NLog" Version="4.7.14" />
   </ItemGroup>
 
   <ItemGroup>
