--- a/PrototypeBankSystem.Persistence/appsettings.json
+++ b/PrototypeBankSystem.Persistence/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  
+  "ConnectionString": {
+      "DefaultConnectionMSSQLDatabase": "Server =.\\SQLExpress; Database = PrototypeBankSystemDB; Trusted_Connection = True; MultipleActiveResultSets = true; User ID = root; pwd = root"
+    }
 }
