--- a/PrototypeBankSystem.Persistence/Properties/launchSettings.json
+++ b/PrototypeBankSystem.Persistence/Properties/launchSettings.json
@@ -12,8 +12,8 @@
     "PrototypeBankSystem.Persistence": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "swagger",
+      "launchBrowser": false,
+      "launchUrl": "weatherforecast",
       "applicationUrl": "https://localhost:7281;http://localhost:5281",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -21,8 +21,8 @@
     },
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
+      "launchBrowser": false,
+      "launchUrl": "weatherforecast",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
