Добавил прослойку для API, добавил в контроллерах put и delete, редактирую репозитории.

--- a/PrototypeBankSystem.Application/PrototypeBankSystem.Application.csproj
+++ b/PrototypeBankSystem.Application/PrototypeBankSystem.Application.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\PrototypeBankSystem.Domain\PrototypeBankSystem.Domain.csproj" />
   </ItemGroup>
 
