--- a/PrototypeBankSystem.Persistence/appsettings.json
+++ b/PrototypeBankSystem.Persistence/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   
   "ConnectionString": {
-      "DefaultConnectionMSSQLDatabase": "Server =.\\SQLExpress; Database = PrototypeBankSystemDB; Trusted_Connection = True; MultipleActiveResultSets = true; User ID = root; pwd = root"
+      "DefaultConnectionMSSQLDatabase": "Server =(local); Database = PrototypeBankSystemDB; Trusted_Connection = True; MultipleActiveResultSets = true; User ID = root; pwd = root"
     }
 }
