--- a/PrototypeBankSystem.API/PrototypeBankSystem.API.csproj
+++ b/PrototypeBankSystem.API/PrototypeBankSystem.API.csproj
@@ -24,7 +24,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PrototypeBankSystem.Application\PrototypeBankSystem.DAL.csproj" />
+    <ProjectReference Include="..\PrototypeBankSystem.BLL\PrototypeBankSystem.BLL.csproj" />
+    <ProjectReference Include="..\PrototypeBankSystem.DAL\PrototypeBankSystem.DAL.csproj" />
   </ItemGroup>
 
 </Project>
