--- a/PrototypeBankSystem.DAL/PrototypeBankSystem.DAL.csproj
+++ b/PrototypeBankSystem.DAL/PrototypeBankSystem.DAL.csproj
@@ -3,15 +3,15 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.7" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PrototypeBankSystem.Domain\PrototypeBankSystem.BLL.csproj" />
+    <ProjectReference Include="..\PrototypeBankSystem.BLL\PrototypeBankSystem.BLL.csproj" />
   </ItemGroup>
 
 </Project>
